<resources>
    <string name="app_name">Lactato_Udec</string>
    <string name="ek_img_content">ExportKit Image</string>
	<string name="selecciona_la_prueba_a_realizar_string">Selecciona la Prueba a Realizar</string>
	<string name="__ya_definiste_tus_datos__string">Ya definiste tus datos?</string>
	<string name="subacuatica_string">Subacuatica</string>
	<string name="ciclismo_string">Ciclismo</string>
	<string name="cicloerg_metro_string">CICLOERGMETRO</string>
	<string name="nataccion_string">Nataccion</string>
	<string name="canotaje_string">Canotaje</string>
	<string name="carrera_en_pista_string">Carrera En Pista</string>
	<string name="banda_sin_fin_string">Banda Sin Fin</string>
	<string name="__definir_datos__string">Definir Datos?</string>
	<string name="llena_tus_datos_correspondientes_string">Llena tus datos correspondientes</string>
	<string name="tu_genero_string">Tu genero</string>
	<string name="tu_edad__string">Tu Edad:</string>
	<string name="tu_peso__string">Tu Peso:</string>
	<string name="tu_temperatura__string">Tu Temperatura:</string>
	<string name="tu_etapa__string">Tu Etapa:</string>
	<string name="deporte_o_evento__string">Deporte o Evento:</string>
	<string name="kg__string">kg.</string>
	<string name="tu_nombre_y_apellido__string">Tu Nombre y Apellido:</string>
	<string name="guardar_string">Guardar</string>
	<string name="prepcomp_string">Prepcomp</string>
	<string name="pelotas_string">Pelotas</string>
	<string name="combate_string">Combate</string>
	<string name="veloc___fza_rap___anaerobico_string">Veloc., Fza rap., Anaerobico</string>
	<string name="prep_string">Prep</string>
	<string name="resistencia_string">Resistencia</string>
	<string name="resistencia_ek1_string">Resistencia</string>
	<string name="resistencia_ek2_string">Resistencia</string>
	<string name="comp_string">Comp</string>
	<string name="test_para_carrera_a_pie_string">Test Para Carrera A Pie</string>
	<string name="etapa_1_aerobica_string">Etapa 1 Aerobica</string>
	<string name="nota__el_calentamiento_no_puede_ser_de_mas_de_15_min__ni_incluyendo_piques_string">NOTA: EL CALENTAMIENTO NO PUEDE SER DE MAS DE 15 MIN. NI INCLUYENDO PIQUES</string>
</resources>




	
	